--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "mediasoup-client": "^3.12.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-player": "^3.3.1",
     "simple-peer": "^9.11.1",
     "socket.io-client": "^4.8.1",
